Fix colors for a better look and feel in dark mode
Some of the former colors were not suitable for dark mode and had to be
replaced.

Be aware that this might change the look and feel of your website also
in normal mode. Check the colors before applying them to your live
website.

If you want to change the colors use the customCSS feature of Vitae.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -77,7 +77,7 @@ footer a {
 }
 
 footer a:hover {
-  color: #3700ff
+  color: #00E
 }
 
 html,button,input,select,textarea {
@@ -89,7 +89,7 @@ b, strong {
 }
 
 a {
-  color: #3700ff;
+  color: #00E;
   text-decoration: none;
   word-break: break-word;
 }
@@ -133,8 +133,7 @@ textarea {
 
 blockquote {
   margin-left: 1rem;
-  font-size: 1.2rem;
-  border-left: 2px solid #3700FF;
+  border-left: 2px solid #E00;
   padding-left: 20px;
 }
 
@@ -338,17 +337,16 @@ table th {
 }
 
 .post .draft-label {
-    color: #3700ff;
-    text-decoration: none;
+    color: #E00;
+    text-decoration: underline;
     padding: 2px 4px;
-    border-radius: 4px;
     margin-left: 6px;
-    background-color: #f9f2f4;
+    font-size: 1.4rem;
 }
 
 .post .tags a {
     display: inline-block;
-    border: 1px solid #3700ff;
+    border: 1px solid;
     border-radius: 3px;
     padding: 0px 6px;
     line-height: 20px;
@@ -487,9 +485,8 @@ legend, td, th {
 
 p code {
   border-radius: 5px;
-  border-right: 4px solid #F1F1F1;
-  border-left: 4px solid #F1F1F1;
   background: #F1F1F1;
+  padding: 0px 4px;
 }
 
 @media screen and (max-width: 800px) {
@@ -516,8 +513,7 @@ p code {
 
   blockquote {
     margin-left: 1rem;
-    font-size: 1rem;
-    border-left: 2px solid #3700FF;
+    border-left: 2px solid #E00;
     padding-left: 20px;
   }
 
